objects/FSSK__FSK_FSL_Starter_Kit__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This Custom Settings object is part of the Starter Kit.
It stores the pack properties and preferences</description>
    <fields>
        <fullName>FSSK__ActualTimes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actual Times</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSSK__Actual_Times_on_Gantt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actual Times on Gantt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSSK__Add_Asset_to_Maintenance_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Asset to Maintenance Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSSK__Assign_Resource_On_Service_Appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign Resource On Service Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSSK__Cancelation_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelation Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSSK__Community_Dispatcher_License__c</fullName>
        <inlineHelpText>Dispatcher</inlineHelpText>
        <label>Community Dispatcher License</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSSK__Community_Dispatcher_Permission__c</fullName>
        <label>Community Dispatcher Permission</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSSK__Create_FSL_Resource_From_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create FSL Resource From User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSSK__Custom_Notification_Type_Id__c</fullName>
        <label>Custom Notification Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSSK__Days_Until_First_Maintenance__c</fullName>
        <inlineHelpText>Number of days until the first asset maintenance work order date</inlineHelpText>
        <label>Days Until First Maintenance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSSK__Dispatched_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dispatched Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSSK__Dispatcher_License_Permission_ID__c</fullName>
        <label>Dispatcher License Permission ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSSK__Dispatcher_PSL_ID__c</fullName>
        <label>Dispatcher PSL ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSSK__Dispatcher_Permissions_ID__c</fullName>
        <label>Dispatcher Permissions ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSSK__Emergency_Dispatched_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Emergency Dispatched Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSSK__EndingStatus__c</fullName>
        <inlineHelpText>This field stores the Services Appointment statues API Name that indicates changes relates to end time actions</inlineHelpText>
        <label>Ending Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSSK__Excluded_SR_on_SA_Rejection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Excluded SR on SA Rejection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSSK__Hours_for_Dispatched_Notification__c</fullName>
        <defaultValue>36</defaultValue>
        <inlineHelpText>The Number of Hours to notify Technician for dispatched Service Appointment</inlineHelpText>
        <label>Hours for Dispatched Notification</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSSK__Mobile_Canned_Custom_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Canned Custom Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSSK__Mobile_License_Permission_ID__c</fullName>
        <label>Mobile License Permission ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSSK__Mobile_PSL_ID__c</fullName>
        <label>Mobile PSL ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSSK__Mobile_Status_Satiation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Status Satiation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSSK__Populate_Work_Order_Lookup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Populate Work Order Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSSK__Remove_Licenses_on_Deactivation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove Licenses on Resource Deactivation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSSK__Resource_License_Permission_ID__c</fullName>
        <label>Resource License Permission ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSSK__Resource_Permissions_ID__c</fullName>
        <label>Resource Permissions ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSSK__Scheduling_PSL_ID__c</fullName>
        <label>Scheduling PSL ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSSK__Set_Gantt_Label__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Set Gantt Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSSK__StartingStatus__c</fullName>
        <inlineHelpText>This field stores the Services Appointment statues API Name that indicates changes relates to start time actions</inlineHelpText>
        <label>Starting Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSSK__Successful_Asset_Installation_Status__c</fullName>
        <inlineHelpText>The status that represents a successful asset installation</inlineHelpText>
        <label>Successful Asset Installation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FSL Starter Kit</label>
    <listViews>
        <fullName>FSSK__All_Fields_and_Records</fullName>
        <columns>FSSK__ActualTimes__c</columns>
        <columns>FSSK__StartingStatus__c</columns>
        <columns>FSSK__EndingStatus__c</columns>
        <columns>NAME</columns>
        <columns>SETUP_TYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Fields and Records</label>
    </listViews>
</CustomObject>